# secure-file-manager

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
elgamal/: __init__.py  elgamal_encryptor.py
elgamal/attacks/: __init__.py  fermat.py  wiener.py
elgamal/interfaces/: __init__.py  attacker.py  encryptor.py  key_generator.py  number_generator.py  prime.py
elgamal/keygen/: __init__.py  key_generator.py
elgamal/keys/: __init__.py
elgamal/numgen/: number_generator.py
elgamal/prime_checkers/: __init__.py  fermat.py  initial_check.py  miller_rabin.py  solovay_strassen.py
elgamal/tests/: attackers.py  encryption.py  numgen.py  prime_tester.py  symbol_calc.py  test_run.py
elgamal/utils/: gcd.py  newtons_root.py  prim_root.py  symbol_calculator.py  transform.py
frames/: __init__.py  download.py  info.py  keygen.py  upload.py
twofish/: __init__.py  twofish.c  twofish.h
utils/: messagebox.py
